# prism

./: .gitignore  CLAUDE.md  README.md  docker-compose.yaml  dockerfile  pyproject.toml  pytest.ini
prism/: __init__.py  __main__.py  cli.py  prism.py
prism/css/: prism.tcss
src/prism/: __init__.py  cli.py  prism.py  renderers.py
src/prism/css/: prism.tcss
tests/: README.md  __init__.py  test_app.py  test_cli.py  test_rendering.py
tests/fixtures/: invalid.csv  invalid.json  invalid.tsv  test.csv  test.html  test.json  test.md  test.py  test.tsv  test_with_comments.csv  test_with_comments.tsv
