[tool.poetry]
name = "prism"
version = "0.1.0"
description = ""
authors = ["sheldon <developer@8cylinder.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.7"
textual = "^0.41.0"
textual-dev = "^1.2.1"

[tool.poetry.scripts]
prism = "prism.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
