[project]
name = "prism"
version = "0.1.2"
description = "View files found with cli tools"
readme = "README.md"
authors = [
    {name = "Sheldon McGrandle", email = "developer@8cylinder.com"}
]
classifiers = [
    'License :: OSI Approved :: GNU General Public License v3 (GPLv3)',
    'Operating System :: MacOS',
    'Operating System :: POSIX :: Linux',
    'Programming Language :: Python :: 3.13',
    'Intended Audience :: Developers',
    'Natural Language :: English',
]
requires-python = ">=3.13"
dependencies = [
    "click>=8.1.8",
    "textual>=1.0.0",
]

[project.scripts]
prism = "prism:prism"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.14.1",
    "ruff>=0.9.3",
    "textual-dev>=1.7.0",
]
